[gd_scene load_steps=5 format=3 uid="uid://bwupocn1owcb4"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_vwr42"]
[ext_resource type="Texture2D" uid="uid://8r46jivoueb8" path="res://assets/bg.png" id="2_875ks"]
[ext_resource type="AudioStream" uid="uid://cvk6bitav44n1" path="res://assets/audio/effects/JDSherbert - Ultimate UI SFX Pack - Cursor - 1.wav" id="3_6clre"]
[ext_resource type="Theme" uid="uid://cbs1608u20kwu" path="res://themes/theme.tres" id="3_l05wb"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_vwr42")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.552941, 0, 0.556863, 1)

[node name="Contents" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Contents"]
offset_left = -50.0
offset_top = -50.0
offset_right = 1130.0
offset_bottom = 1970.0
texture = ExtResource("2_875ks")

[node name="Title" type="Label" parent="Contents"]
offset_left = 247.0
offset_top = 79.0
offset_right = 892.0
offset_bottom = 211.0
theme = ExtResource("3_l05wb")
theme_override_font_sizes/font_size = 96
text = "Donut Delight"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Contents"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 305.0
offset_top = 308.0
offset_right = 580.0
offset_bottom = 407.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.160281
theme = ExtResource("3_l05wb")
theme_override_font_sizes/font_size = 72
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Contents"]
offset_left = 448.0
offset_top = 475.0
offset_right = 642.0
offset_bottom = 550.0
theme = ExtResource("3_l05wb")
text = "Resume"

[node name="Options" type="Button" parent="Contents"]
offset_left = 564.0
offset_top = 628.0
offset_right = 755.0
offset_bottom = 703.0
theme = ExtResource("3_l05wb")
text = "Options"

[node name="Credits" type="Button" parent="Contents"]
offset_left = 416.0
offset_top = 761.0
offset_right = 588.0
offset_bottom = 836.0
theme = ExtResource("3_l05wb")
text = "Credits"

[node name="Leave" type="Button" parent="Contents"]
offset_left = 390.0
offset_top = 945.0
offset_right = 753.0
offset_bottom = 1036.0
theme = ExtResource("3_l05wb")
text = "Leave Game"

[node name="Audio" type="Node" parent="."]

[node name="Button" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_6clre")
bus = &"Effects"

[connection signal="pressed" from="Contents/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Contents/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Contents/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Contents/Leave" to="." method="_on_leave_pressed"]
